# iata-dangerous-goods

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASING.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
dg/: __init__.py  dangerous_goods_declaration.py  declarations.py  models.py  packagings.py  regulations.py  un_numbers.py  validation.py
tests/: test_packagings.py  test_validation.py
